# api-docs

./: Cargo.toml  Dioxus.toml  Dockerfile  docker-compose.yml
assets/: caret-down.svg.br  favicon.ico.br  logo.png.br  main.css  main.css.br  navbar.css  navbar.css.br  service.css  service.css.br  sidebar.css  sidebar.css.br  theming.js  theming.js.br
src/: main.rs
src/components/: ThemeToggle.rs  code.rs  dictionary.rs  enums.rs  field.rs  icons.rs  layout.rs  logo.rs  mod.rs  navbar.rs  pagenotfound.rs  services.rs  sidebar.rs  textinput.rs
src/models/: mod.rs  service.rs  sidebar.rs
