[package]
name = "api-docs"
version = "0.1.0"
authors = ["edward <eduromann@gmail.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 6
opt-level = "z"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-ssr = { version = "0.5.1", features = ["incremental"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
regex = "1.10.4"



[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
